feat: add `submitresult` message
